--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -23,14 +23,12 @@ items:
     href: tutorial-geofence.md
 - name: Begrepp
   items:
-  - name: Zoomningsnivåer och rutnät
-    href: zoom-levels-and-tile-grid.md
+  - name: Autentisering med Azure Maps
+    href: azure-maps-authentication.md
   - name: Event Grid-integrering för Azure Maps
     href: azure-maps-event-grid-integration.md
   - name: Välja rätt prisnivå
     href: choose-pricing-tier.md
-  - name: Autentisering med Azure Maps
-    href: azure-maps-authentication.md
   - name: Täckning
     items:
     - name: Täckning för geokodning
@@ -47,6 +45,8 @@ items:
     href: supported-map-styles.md
   - name: Webbläsare som stöds av webb-SDK
     href: supported-browsers.md
+  - name: Zoomningsnivåer och rutnät
+    href: zoom-levels-and-tile-grid.md
 - name: Instruktionsguider
   items:
   - name: Hantera Maps-konton
@@ -159,7 +159,7 @@ items:
   items:
   - name: Användningsvillkor för Azure Maps
     href: https://www.microsoftvolumelicensing.com/DocumentSearch.aspx?Mode=3&DocumentTypeId=31
-  - name: Prissättning
+  - name: Azure Maps-prissättning
     href: https://azure.microsoft.com/pricing/details/azure-maps
   - name: Priskalkylator
     href: https://azure.microsoft.com/pricing/calculator/
@@ -167,7 +167,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-maps
   - name: MSDN-forum
     href: https://social.msdn.microsoft.com/Forums/azure/home?forum=azurelbs
-  - name: Ordlista
+  - name: Azure Maps-videor
+    href: https://aka.ms/AzureMapsVideos
+  - name: Azure Maps-ordlista
     href: glossary.md
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates
@@ -177,7 +179,7 @@ items:
     href: https://azure.microsoft.com/roadmap/?category=iot
   - name: Tekniska fallstudier
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
-  - name: Videoklipp
+  - name: Azure Maps på IoT School
     href: https://iotschool.microsoft.com/learning-paths/4ZktHn3KEUIiUw64C0Aieo
 - name: Relaterat
   items:
@@ -205,9 +207,9 @@ items:
       href: /azure/iot-edge
     - name: SDK:er för IoT-enheter
       href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
-ms.openlocfilehash: db82c8eac3288867b524f19b688b6358b8e6bbc6
-ms.sourcegitcommit: c63fe69fd624752d04661f56d52ad9d8693e9d56
+ms.openlocfilehash: fa4c3a4f8158123e6773640c1612daa0c7390424
+ms.sourcegitcommit: b4ad15a9ffcfd07351836ffedf9692a3b5d0ac86
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/28/2019
-ms.locfileid: "58575831"
+ms.lasthandoff: 04/05/2019
+ms.locfileid: "59058942"
