--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -1,16 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: c68bf4cf8bcc50069f3741ac0f1746363c1f82ac
-ms.sourcegitcommit: 5839af386c5a2ad46aaaeb90a13065ef94e61e74
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/19/2019
-ms.locfileid: "57861816"
 documentType: LandingData
 title: Dokumentation om Speech Services
 metadata:
-  title: Dokumentation om Speech Services – självstudier, snabbstarter, API-referens
+  title: 'Dokumentation om Speech Services – självstudier, snabbstarter, API-referens'
   titleSuffix: Azure Cognitive Services
-  description: Speech Services ger utvecklarna ett enkelt sätt att lägga till kraftfulla talaktiverade funktioner i sina program. Exemplen omfattar styrning av röstkommandon och dialog, konversation med naturligt tal, transkription och diktering av tal samt talöversättning.
+  description: 'Speech Services ger utvecklarna ett enkelt sätt att lägga till kraftfulla talaktiverade funktioner i sina program. Exemplen omfattar styrning av röstkommandon och dialog, konversation med naturligt tal, transkription och diktering av tal samt talöversättning.'
   services: cognitive-services
   author: nitinme
   manager: cgronlun
@@ -24,235 +18,232 @@ metadata:
   ms.author: erhopf
   ms.custom: seodec18
 abstract:
-  description: Lär dig hur du använder Speech Services och Speech för att lägga till stöd för talfunktioner till dina appar. Du kan använda Speech SDK för att lägga till funktionerna <i>tal till text</i> (taligenkänning/SR) <i>avsikt</i>, <i>översättning</i> och <i>text till tal</i> (text till tal) i dina appar. Speech Services har även REST-API:er som kan användas med alla programmeringsspråk som kan göra HTTP-begäranden.
+  description: 'Lär dig hur du använder Speech Services och Speech för att lägga till stöd för talfunktioner till dina appar. Du kan använda Speech SDK för att lägga till funktionerna <i>tal till text</i> (taligenkänning/SR) <i>avsikt</i>, <i>översättning</i> och <i>text till tal</i> (text till tal) i dina appar. Taltjänsterna har även REST-API:er som kan användas med alla programmeringsspråk som kan göra HTTP-begäranden.'
 sections:
-- items:
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 3
+  - items:
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 3
+        items:
+          - href: /azure/cognitive-services/speech-service/overview
+            html: <p>Läs mer om Azure Speech Services.</p>
+            image:
+              src: ../media/index/i_overview.svg
+            title: Vad är Speech Service?
+          - href: /azure/cognitive-services/speech-service/get-started
+            html: <p>Registrera dig kostnadsfritt.</p>
+            image:
+              src: ../media/index/i_get-started.svg
+            title: Registrera dig för Speech Services
+          - href: /azure/cognitive-services/speech-service/speech-devices-sdk
+            html: <p>Läs mer om talbaserad maskinvarureferens.</p>
+            image:
+              src: ../media/index/i_guidelines.svg
+            title: Speech Devices SDK
+  - title: Snabbstarter på 5 minuter
     items:
-    - href: /azure/cognitive-services/speech-service/overview
-      html: <p>Läs mer om Azure Speech Services.</p>
-      image:
-        src: ../media/index/i_overview.svg
-      title: Vad är Speech Service?
-    - href: /azure/cognitive-services/speech-service/get-started
-      html: <p>Registrera dig kostnadsfritt.</p>
-      image:
-        src: ../media/index/i_get-started.svg
-      title: Registrera dig för Speech Services
-    - href: /azure/cognitive-services/speech-service/speech-devices-sdk
-      html: <p>Läs mer om talbaserad maskinvarureferens.</p>
-      image:
-        src: ../media/index/i_guidelines.svg
-      title: Speech Devices SDK
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig hur du laddar ned, installerar och använd SDK:n genom att välja en länk <img src="media/index/link.jpg" height="15" width="15"></img>.
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: media/index/uwp.jpg
-    - image:
-        src: media/index/logo_csharp.svg
-    - image:
-        src: media/index/logo_cplusplus.svg
-    - image:
-        src: media/index/logo_netcore.svg
-    - image:
-        src: https://docs.microsoft.com/media/logos/logo_unity.svg
-    - image:
-        src: media/index/logo_java.jpg
-    - image:
-        src: media/index/logo_python.svg
-    - image:
-        src: media/index/logo_objc.jpg
-    - image:
-        src: media/index/logo_nodejs.svg
-    - image:
-        src: media/index/logo_js.svg
-    - image:
-        src: media/index/logo_rest.svg
-    rows:
-    - title: Windows 10 (x64)
-      values:
-      - href: quickstart-csharp-uwp
-      - href: quickstart-csharp-windows
-      - href: quickstart-cpp-windows
-      - href: quickstart-csharp-dotnetcore-windows
-      - href: quickstart-csharp-unity
-      - href: quickstart-java-jre
-      - href: quickstart-python
-      - href: 
-      - href: quickstart-js-node
-      - href: 
-    - title: Windows 10 (x86)
-      values:
-      - href: quickstart-csharp-uwp
-      - href: quickstart-csharp-windows
-      - href: quickstart-cpp-windows
-      - href: quickstart-csharp-dotnetcore-windows
-      - href: quickstart-csharp-unity
-      - href: 
-      - href: quickstart-python
-      - href: 
-      - href: quickstart-js-node
-      - href: 
-    - title: Linux (x64)
-      values:
-      - href: 
-      - href: 
-      - href: quickstart-cpp-linux
-      - href: quickstart-csharp-dotnetcore-windows
-      - href: 
-      - href: quickstart-java-jre
-      - href: quickstart-python
-      - href: 
-      - href: quickstart-js-node
-      - href: 
-    - title: Linux (x86)
-      values:
-      - href: 
-      - href: 
-      - href: quickstart-cpp-linux
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: quickstart-js-node
-      - href: 
-    - title: Android (ARM32/64)
-      values:
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: quickstart-csharp-unity
-      - href: quickstart-java-android
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-    - title: Android (x86/x64)
-      values:
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: quickstart-csharp-unity
-      - href: quickstart-java-android
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-    - title: iOS (ARM64)
-      values:
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: quickstart-objectivec-ios
-      - href: 
-      - href: 
-    - title: macOS (x64)
-      values:
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: quickstart-python
-      - href: 
-      - href: quickstart-js-node
-      - href: 
-    - title: SDK för enheter (ARM32)
-      values:
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: speech-devices-sdk
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-    - title: Webbläsare
-      values:
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: quickstart-js-browser
-    - title: REST
-      values:
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-      - href: rest-apis
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig utveckla program med hjälp av tjänsten för Speech Service:'
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Lär dig hur du laddar ned, installerar och använd SDK:n genom att välja en länk <img src="media/index/link.jpg" height="15" width="15"></img>.'
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: media/index/uwp.jpg
+          - image:
+              src: media/index/logo_csharp.svg
+          - image:
+              src: media/index/logo_cplusplus.svg
+          - image:
+              src: media/index/logo_netcore.svg
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_unity.svg'
+          - image:
+              src: media/index/logo_java.jpg
+          - image:
+              src: media/index/logo_python.svg
+          - image:
+              src: media/index/logo_objc.jpg
+          - image:
+              src: media/index/logo_nodejs.svg
+          - image:
+              src: media/index/logo_js.svg
+          - image:
+              src: media/index/logo_rest.svg
+        rows:
+          - title: Windows 10 (x64)
+            values:
+              - href: quickstart-csharp-uwp
+              - href: quickstart-csharp-windows
+              - href: quickstart-cpp-windows
+              - href: quickstart-csharp-dotnetcore-windows
+              - href: quickstart-csharp-unity
+              - href: quickstart-java-jre
+              - href: quickstart-python
+              - href: null
+              - href: quickstart-js-node
+              - href: null
+          - title: Windows 10 (x86)
+            values:
+              - href: quickstart-csharp-uwp
+              - href: quickstart-csharp-windows
+              - href: quickstart-cpp-windows
+              - href: quickstart-csharp-dotnetcore-windows
+              - href: quickstart-csharp-unity
+              - href: null
+              - href: quickstart-python
+              - href: null
+              - href: quickstart-js-node
+              - href: null
+          - title: Linux (x64)
+            values:
+              - href: null
+              - href: null
+              - href: quickstart-cpp-linux
+              - href: quickstart-csharp-dotnetcore-windows
+              - href: null
+              - href: quickstart-java-jre
+              - href: quickstart-python
+              - href: null
+              - href: quickstart-js-node
+              - href: null
+          - title: Linux (x86)
+            values:
+              - href: null
+              - href: null
+              - href: quickstart-cpp-linux
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: quickstart-js-node
+              - href: null
+          - title: Android (ARM32/64)
+            values:
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: quickstart-csharp-unity
+              - href: quickstart-java-android
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+          - title: Android (x86/x64)
+            values:
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: quickstart-csharp-unity
+              - href: quickstart-java-android
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+          - title: iOS (ARM64)
+            values:
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: quickstart-objectivec-ios
+              - href: null
+              - href: null
+          - title: macOS (x64)
+            values:
+              - href: null
+              - href: null
+              - href: quickstart-cpp-macos
+              - href: quickstart-csharp-dotnetcore-windows
+              - href: null
+              - href: quickstart-java-jre
+              - href: quickstart-python
+              - href: quickstart-objective-c-macos
+              - href: quickstart-js-node
+              - href: null
+          - title: SDK för enheter (ARM32)
+            values:
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: speech-devices-sdk
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+          - title: Webbläsare
+            values:
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: quickstart-js-browser
+          - title: REST
+            values:
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+              - href: rest-apis
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="speech-to-text-sample.md">Tal till text (SR)</a><br/>
-    - html: <a href="intent.md">Avsiktsigenkänning</a><br/>
-    - html: <a href="translation.md">Översättning</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: 'Hitta exempel på GitHub för Speech Service:'
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Lär dig utveckla program med hjälp av tjänsten för Speech Service:'
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="speech-to-text-sample.md">Tal till text (SR)</a><br/>
+          - html: <a href="intent.md">Avsiktsigenkänning</a><br/>
+          - html: <a href="translation.md">Översättning</a>
+          - html: <a href="quickstart-text-to-speech-dotnet-windows.md">Text till tal</a><br/>
+  - title: Exempel
     items:
-    - html: <a href="https://github.com/Azure-Samples/cognitive-services-speech-sdk">Service SDK-exempel</a><br/>
-    - html: <a href="https://github.com/Azure-Samples/Cognitive-Services-Speech-Devices-SDK">Device SDK-exempel</a><br/>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: 'Hitta exempel på GitHub för Speech Service:'
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="https://github.com/Azure-Samples/cognitive-services-speech-sdk">Service SDK-exempel</a><br/>'
+          - html: '<a href="https://github.com/Azure-Samples/Cognitive-Services-Speech-Devices-SDK">Device SDK-exempel</a><br/>'
+  - title: Referens
     items:
-    - title: SDK-referens
-      html: >
-        <p><a href="https://aka.ms/csspeech/csharpref">C# API (UWP, .NET och Unity)</a></p>
-
-        <p><a href="https://aka.ms/csspeech/cppref">C++ API</a></p>
-
-        <p><a href="https://aka.ms/csspeech/javaref">Java-API</a></p>
-
-        <p><a href="https://aka.ms/csspeech/pythonref">Python API</a></p>
-
-        <p><a href="https://aka.ms/csspeech/objectivecref">Objective-C API</a></p>
-
-        <p><a href="https://aka.ms/csspeech/javascriptref">JavaScript API</a></p>
-    - title: REST-API
-      html: >
-        <p><a href="https://docs.microsoft.com/azure/cognitive-services/speech-service/rest-apis">REST-API</a></p>
-    - title: PowerShell
-      html: >
-        <p><a href=https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services">Azure PowerShell</a></p>
-    - title: CLI
-      html: <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest">Azure CLI</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: SDK-referens
+            html: |
+              <p><a href="https://aka.ms/csspeech/csharpref">C# API (UWP, .NET och Unity)</a></p>
+              <p><a href="https://aka.ms/csspeech/cppref">C++ API</a></p>
+              <p><a href="https://aka.ms/csspeech/javaref">Java-API</a></p>
+              <p><a href="https://aka.ms/csspeech/pythonref">Python API</a></p>
+              <p><a href="https://aka.ms/csspeech/objectivecref">Objective-C API</a></p>
+              <p><a href="https://aka.ms/csspeech/javascriptref">JavaScript API</a></p>
+          - title: REST-API
+            html: |
+              <p><a href="https://docs.microsoft.com/azure/cognitive-services/speech-service/rest-apis">REST-API</a></p>
+          - title: PowerShell
+            html: |
+              <p><a href=https://docs.microsoft.com/powershell/module/az.cognitiveservices/#cognitive_services">Azure PowerShell</a></p>
+          - title: CLI
+            html: |
+              <p><a href="https://docs.microsoft.com/cli/azure/cognitiveservices?view=azure-cli-latest">Azure CLI</a></p>
