--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -84,22 +84,6 @@ items:
       href: service-fabric-tutorial-standalone-install-an-application.md
     - name: 4 -– Rensa klustret och ta bort infrastrukturen
       href: service-fabric-tutorial-standalone-clean-up.md
-- name: Bästa praxis
-  items:
-  - name: Översikt över metodtips för Service Fabric
-    href: service-fabric-best-practices-overview.md
-  - name: Säkerhet
-    href: service-fabric-best-practices-security.md
-  - name: Nätverk
-    href: service-fabric-best-practices-networking.md
-  - name: Beräkningsplanering och skalning
-    href: service-fabric-best-practices-capacity-scaling.md
-  - name: Infrastruktur som kod
-    href: service-fabric-best-practices-infrastructure-as-code.md
-  - name: Övervakning och diagnostik
-    href: service-fabric-best-practices-monitoring.md
-  - name: Checklista för produktionsberedskap
-    href: service-fabric-production-readiness-checklist.md
 - name: Exempel
   items:
   - name: Kodexempel
@@ -118,6 +102,30 @@ items:
     href: service-fabric-application-scenarios.md
   - name: Arkitektur
     href: service-fabric-architecture.md
+  - name: Säkerhet
+    items:
+    - name: Service Fabric-säkerhet
+      href: service-fabric-best-practices-security.md
+    - name: Service Fabric-programsäkerhet
+      href: service-fabric-application-and-service-security.md
+    - name: Service Fabric-klustersäkerhet
+      href: service-fabric-cluster-security.md
+    - name: Vanliga säkerhetsattribut i Azure
+      href: service-fabric-security-attributes.md
+  - name: Bästa praxis
+    items:
+    - name: Översikt över metodtips för Service Fabric
+      href: service-fabric-best-practices-overview.md
+    - name: Nätverk
+      href: service-fabric-best-practices-networking.md
+    - name: Beräkningsplanering och skalning
+      href: service-fabric-best-practices-capacity-scaling.md
+    - name: Infrastruktur som kod
+      href: service-fabric-best-practices-infrastructure-as-code.md
+    - name: Övervakning och diagnostik
+      href: service-fabric-best-practices-monitoring.md
+    - name: Checklista för produktionsberedskap
+      href: service-fabric-production-readiness-checklist.md
   - name: Terminologi
     href: service-fabric-technical-overview.md
   - name: Bygga program
@@ -833,8 +841,6 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Felsökningsguider
     href: https://github.com/Azure/Service-Fabric-Troubleshooting-Guides
-  - name: Vanliga säkerhetsattribut
-    href: service-fabric-security-attributes.md
   - name: Exempelkod
     href: https://aka.ms/servicefabricsamples
   - name: Supportalternativ
@@ -845,9 +851,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-ms.openlocfilehash: de46010e1123b34c84731e97951bb67edc43f0b2
-ms.sourcegitcommit: 04716e13cc2ab69da57d61819da6cd5508f8c422
+ms.openlocfilehash: 02b5712aedc96fce447f11b755b837b52855379b
+ms.sourcegitcommit: 62d3a040280e83946d1a9548f352da83ef852085
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/02/2019
-ms.locfileid: "58847558"
+ms.lasthandoff: 04/08/2019
+ms.locfileid: "59278470"
