--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -581,8 +581,8 @@ items:
           href: insights/network-performance-monitor.md
         - name: Prestandaövervakning
           href: insights/network-performance-monitor-performance-monitor.md
-        - name: Tjänstslutpunkt
-          href: insights/network-performance-monitor-service-endpoint.md
+        - name: Övervakare av tjänstanslutning
+          href: insights/network-performance-monitor-service-connectivity.md
         - name: ExpressRoute
           href: insights/network-performance-monitor-expressroute.md
         - name: Prissättning
@@ -658,8 +658,9 @@ items:
   - name: Visualisera data
     items:
     - name: Vyer
-      href: platform/view-designer.md
       items:
+      - name: Vydesigner
+        href: platform/view-designer.md
       - name: Panelreferens
         href: platform/view-designer-tiles.md
       - name: Referens för visualiseringsdel
@@ -864,9 +865,9 @@ items:
         href: platform/autoscale-common-scale-patterns.md
       - name: Skala automatiskt med anpassat mått
         href: platform/autoscale-custom-metric.md
-      - name: VM Scale Sets för automatisk skalning med Resource Manager-mallar
+      - name: Autoskala VM-skalningsuppsättningar med hjälp av Resource Manager-mallar
         href: platform/autoscale-virtual-machine-scale-sets.md
-      - name: Skala datorer i en skalningsuppsättning för virtuella datorer automatiskt
+      - name: Skala automatiskt datorer i en VM-skalningsuppsättning
         href: ../virtual-machine-scale-sets/virtual-machine-scale-sets-windows-autoscale.md?toc=/azure/azure-monitor/toc.json
       - name: Konfigurera webhooks och e-postaviseringar med automatisk skalning
         href: platform/autoscale-webhook-email.md
@@ -1071,9 +1072,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: b2021ca33265e06f882f04f726a889ddae0fd91f
-ms.sourcegitcommit: 62d3a040280e83946d1a9548f352da83ef852085
+ms.openlocfilehash: 7605179d1d1129587114f1462639ad06dde6fcef
+ms.sourcegitcommit: 1a19a5845ae5d9f5752b4c905a43bf959a60eb9d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/08/2019
-ms.locfileid: "59261164"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59491108"
