--- a/articles/notification-hubs/index.yml
+++ b/articles/notification-hubs/index.yml
@@ -1,18 +1,12 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 0d4968c0cfbc49f990eebbd84c8bd4d8ecac5fe7
-ms.sourcegitcommit: 70550d278cda4355adffe9c66d920919448b0c34
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/26/2019
-ms.locfileid: "58434746"
 documentType: LandingData
 title: Dokumentation om Azure Notification Hubs
 metadata:
-  title: Dokumentation om Azure Notification Hubs – Självstudier, API-referens | Microsoft Docs
-  description: Lär dig hur du skickar push-meddelanden från alla serverdelar till alla mobila enheter med Notification Hubs. Självstudier, API-referenser och annan dokumentation.
+  title: 'Dokumentation om Azure Notification Hubs – Självstudier, API-referens | Microsoft Docs'
+  description: 'Lär dig hur du skickar push-meddelanden från alla serverdelar till alla mobila enheter med Notification Hubs. Självstudier, API-referenser och annan dokumentation.'
   services: notification-hubs
   author: spelluru
-  manager: 
+  manager: null
   ms.service: notification-hubs
   ms.tgt_pltfrm: na
   ms.devlang: na
@@ -20,46 +14,47 @@ metadata:
   ms.date: 03/01/2017
   ms.author: spelluru
 abstract:
-  description: Lär dig hur du använder Notification Hubs, en skalbar push-meddelandemotor för flera plattformar, med vilken du kan skicka miljontals meddelanden till program som körs på olika typer av enheter (Android, iOS, Windows, Windows Phone, Baidu, Kindle). <p>Självstudier, API-referenser och annan dokumentation som visar hur du konfigurerar och skickar push-meddelanden från alla serverdelar till alla mobila enheter.</p>
+  description: 'Lär dig hur du använder Notification Hubs, en skalbar push-meddelandemotor för flera plattformar, med vilken du kan skicka miljontals meddelanden till program som körs på olika typer av enheter (Android, iOS, Windows, Windows Phone, Baidu, Kindle). <p>Självstudier, API-referenser och annan dokumentation som visar hur du konfigurerar och skickar push-meddelanden från alla serverdelar till alla mobila enheter.</p>'
   aside:
     image:
-      alt: 
+      alt: null
       height: 110
       src: media/index/video.png
       width: 250
     title: Skicka push-meddelanden till Android-program
-    href: https://channel9.msdn.com/Shows/Azure-Friday/Using-Azure-Notification-Hubs-in-an-Android-Application
+    href: 'https://channel9.msdn.com/Shows/Azure-Friday/Using-Azure-Notification-Hubs-in-an-Android-Application'
     width: 250
 sections:
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: 'Lär dig hur man skickar push-meddelanden med Notification Hubs:'
-  - type: list
-    style: ordered
+  - title: Steg för steg-självstudier
     items:
-    - html: Push-meddelanden till alla registrerade enheter – <a href="/azure/notification-hubs/notification-hubs-android-push-notification-google-fcm-get-started">Android</a> | <a href="/azure/notification-hubs/notification-hubs-baidu-china-android-notifications-get-started">Baidu</a> | <a href="/azure/notification-hubs/notification-hubs-chrome-push-notifications-get-started">Chrome</a> | <a href="/azure/notification-hubs/notification-hubs-ios-apple-push-notification-apns-get-started">iOS</a>  |  <a href="/azure/notification-hubs/notification-hubs-kindle-amazon-adm-push-notification">Kindle</a> | <a href="/azure/notification-hubs/notification-hubs-windows-store-dotnet-get-started-wns-push-notification">Windows</a> | <a href="/azure/notification-hubs/notification-hubs-windows-mobile-push-notifications-mpns">Windows Phone</a>  |  <a href="/azure/notification-hubs/xamarin-notification-hubs-push-notifications-android-gcm"> Xamarin.Android</a> | <a href="/azure/notification-hubs/xamarin-notification-hubs-ios-push-notification-apns-get-started">Xamarin.iOS</a>
-    - html: Push-meddelanden till specifika enheter – <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification">Android</a> | <a href="/azure/notification-hubs/notification-hubs-ios-xplat-segmented-apns-push-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-windows-notification-dotnet-push-xplat-segmented-wns">Windows</a> | <a href="/azure/notification-hubs/notification-hubs-windows-phone-push-xplat-segmented-mpns-notification">Windows Phone</a>
-    - html: Push-meddelanden till specifika användare – <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification">Android</a> | <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-ios-apple-apns-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-windows-dotnet-wns-notification">Windows</a>
-    - html: Platsbaserade push-meddelanden – <a href="/azure/notification-hubs/notification-hubs-push-bing-spatial-data-geofencing-notification">Windows</a>
-    - html: Skicka anpassade och lokaliserade push-meddelanden – <a href="/azure/notification-hubs/notification-hubs-ios-xplat-localized-apns-push-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-windows-store-dotnet-xplat-localized-wns-push-notification">Windows</a>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Azure Notification Hubs-exempelappar är tillgängliga från flera källor. Vi paketerar plattformsspecifika exempel med enskilda SDK:er (länkar nedan) och den fristående lagringsplatsen med exempel innefattar exempel för andra plattformar.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Lär dig hur man skickar push-meddelanden med Notification Hubs:'
+      - type: list
+        style: ordered
+        items:
+          - html: Push-meddelanden till alla registrerade enheter – <a href="/azure/notification-hubs/notification-hubs-android-push-notification-google-fcm-get-started">Android</a> | <a href="/azure/notification-hubs/notification-hubs-baidu-china-android-notifications-get-started">Baidu</a> | <a href="/azure/notification-hubs/notification-hubs-chrome-push-notifications-get-started">Chrome</a> | <a href="/azure/notification-hubs/notification-hubs-ios-apple-push-notification-apns-get-started">iOS</a>  |  <a href="/azure/notification-hubs/notification-hubs-kindle-amazon-adm-push-notification">Kindle</a> | <a href="/azure/notification-hubs/notification-hubs-windows-store-dotnet-get-started-wns-push-notification">Windows</a> | <a href="/azure/notification-hubs/notification-hubs-windows-mobile-push-notifications-mpns">Windows Phone</a>  |  <a href="/azure/notification-hubs/xamarin-notification-hubs-push-notifications-android-gcm"> Xamarin.Android</a> | <a href="/azure/notification-hubs/xamarin-notification-hubs-ios-push-notification-apns-get-started">Xamarin.iOS</a>
+          - html: Push-meddelanden till specifika enheter – <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-android-xplat-segmented-gcm-push-notification">Android</a> | <a href="/azure/notification-hubs/notification-hubs-ios-xplat-segmented-apns-push-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-windows-notification-dotnet-push-xplat-segmented-wns">Windows</a> | <a href="/azure/notification-hubs/notification-hubs-windows-phone-push-xplat-segmented-mpns-notification">Windows Phone</a>
+          - html: Push-meddelanden till specifika användare – <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-gcm-android-push-to-user-google-notification">Android</a> | <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-ios-apple-apns-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-aspnet-backend-windows-dotnet-wns-notification">Windows</a>
+          - html: Platsbaserade push-meddelanden – <a href="/azure/notification-hubs/notification-hubs-push-bing-spatial-data-geofencing-notification">Windows</a>
+          - html: Skicka anpassade och lokaliserade push-meddelanden – <a href="/azure/notification-hubs/notification-hubs-ios-xplat-localized-apns-push-notification">iOS</a> | <a href="/azure/notification-hubs/notification-hubs-windows-store-dotnet-xplat-localized-wns-push-notification">Windows</a>
+  - title: Exempel
     items:
-    - html: <a href="https://github.com/Azure/azure-notificationhubs-android">Android SDK</a>
-    - html: <a href="https://github.com/Azure/azure-notificationhubs-ios">iOS SDK</a>
-    - html: <a href="https://github.com/Azure/azure-notificationhubs-dotnet">.NET SDK</a>
-    - html: <a href="https://github.com/Azure/azure-notificationhubs-samples">Lagringsplats med exempel (andra plattformar)</a>
-    - html: <a href="/azure/notification-hubs/samples-powershell">PowerShell</a>
-- title: Referens
-  items:
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: 'Azure Notification Hubs-exempelappar är tillgängliga från flera källor. Vi paketerar plattformsspecifika exempel med enskilda SDK:er (länkar nedan) och den fristående lagringsplatsen med exempel innefattar exempel för andra plattformar.'
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-android">Android SDK</a>'
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-ios">iOS SDK</a>'
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-dotnet">.NET SDK</a>'
+          - html: '<a href="https://github.com/Azure/azure-notificationhubs-samples">Lagringsplats med exempel (andra plattformar)</a>'
+          - html: <a href="/azure/notification-hubs/samples-powershell">PowerShell</a>
+  - title: Referens
     items:
-    - html: <a href="https://docs.microsoft.com/powershell/module/az.notificationhubs">Azure PowerShell</a>
-    - html: <a href="/dotnet/api/microsoft.azure.notificationhubs">.NET SDK</a>
-    - html: <a href="/rest/api/notificationhubs">REST-API</a>
+      - type: list
+        style: unordered
+        items:
+          - html: '<a href="https://docs.microsoft.com/powershell/module/az.notificationhubs">Azure PowerShell</a>'
+          - html: <a href="/dotnet/api/microsoft.azure.notificationhubs">.NET SDK</a>
+          - html: <a href="/rest/api/notificationhubs">REST API för hantering</a>
+          - html: '<a href="https://docs.microsoft.com/previous-versions/azure/reference/dn223264(v%3dazure.100)">REST-API för Notification Hubs-tjänsten</a>'
