--- a/articles/service-bus-messaging/TOC.yml
+++ b/articles/service-bus-messaging/TOC.yml
@@ -12,38 +12,44 @@ items:
   items:
   - name: Service Bus-köer
     items:
-    - name: Skapa en Service Bus-kö – portalen
-      href: service-bus-quickstart-portal.md
-    - name: Skapa en Service Bus-kö – PowerShell
-      href: service-bus-quickstart-powershell.md
-    - name: Skapa en Service Bus-kö – CLI
-      href: service-bus-quickstart-cli.md
-    - name: Skicka och ta emot meddelanden – .NET
-      href: service-bus-dotnet-get-started-with-queues.md
-    - name: Skicka och ta emot meddelanden – Java
-      href: service-bus-java-how-to-use-queues.md
-    - name: Skicka och ta emot meddelanden – Node.js
-      href: service-bus-nodejs-how-to-use-queues.md
-    - name: Skicka och ta emot meddelanden – PHP
-      href: service-bus-php-how-to-use-queues.md
-    - name: Skicka och ta emot meddelanden – Python
-      href: service-bus-python-how-to-use-queues.md
-    - name: Skicka och ta emot meddelanden – Ruby
-      href: service-bus-ruby-how-to-use-queues.md
+    - name: Skapa en Service Bus-kö
+      items:
+      - name: Azure Portal
+        href: service-bus-quickstart-portal.md
+      - name: Azure PowerShell
+        href: service-bus-quickstart-powershell.md
+      - name: Azure CLI
+        href: service-bus-quickstart-cli.md
+    - name: Skicka och ta emot meddelanden
+      items:
+      - name: .NET
+        href: service-bus-dotnet-get-started-with-queues.md
+      - name: Java
+        href: service-bus-java-how-to-use-queues.md
+      - name: Node.js
+        href: service-bus-nodejs-how-to-use-queues.md
+      - name: PHP
+        href: service-bus-php-how-to-use-queues.md
+      - name: Python
+        href: service-bus-python-how-to-use-queues.md
+      - name: Ruby
+        href: service-bus-ruby-how-to-use-queues.md
   - name: Service Bus-ämnen och prenumerationer
     items:
-    - name: Publicera och prenumerera på meddelande – .NET
-      href: service-bus-dotnet-how-to-use-topics-subscriptions.md
-    - name: Publicera och prenumerera på meddelande – Java
-      href: service-bus-java-how-to-use-topics-subscriptions.md
-    - name: Publicera och prenumerera på meddelande – Node.js
-      href: service-bus-nodejs-how-to-use-topics-subscriptions.md
-    - name: Publicera och prenumerera på meddelande – PHP
-      href: service-bus-php-how-to-use-topics-subscriptions.md
-    - name: Publicera och prenumerera på meddelande – Python
-      href: service-bus-python-how-to-use-topics-subscriptions.md
-    - name: Publicera och prenumerera på meddelande – Ruby
-      href: service-bus-ruby-how-to-use-topics-subscriptions.md
+    - name: Publicera och prenumerera på meddelanden
+      items:
+      - name: .NET
+        href: service-bus-dotnet-how-to-use-topics-subscriptions.md
+      - name: Java
+        href: service-bus-java-how-to-use-topics-subscriptions.md
+      - name: Node.js
+        href: service-bus-nodejs-how-to-use-topics-subscriptions.md
+      - name: PHP
+        href: service-bus-php-how-to-use-topics-subscriptions.md
+      - name: Python
+        href: service-bus-python-how-to-use-topics-subscriptions.md
+      - name: Ruby
+        href: service-bus-ruby-how-to-use-topics-subscriptions.md
 - name: Självstudier
   items:
   - name: Uppdatera inventering – PowerShell
@@ -238,9 +244,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azureservicebus
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-bus
-ms.openlocfilehash: 464e19bc796e41045d0c8422718da39f2aa66a9b
-ms.sourcegitcommit: 9f4eb5a3758f8a1a6a58c33c2806fa2986f702cb
+ms.openlocfilehash: dba047983ffc8e0f32a8339c42286ba64e9ddce5
+ms.sourcegitcommit: 41015688dc94593fd9662a7f0ba0e72f044915d6
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/03/2019
-ms.locfileid: "58906284"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59500234"
