--- a/articles/storage/index.yml
+++ b/articles/storage/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: aaaa5fedfbcc3683d725cad8e4eff9d6b8dcce08
-ms.sourcegitcommit: 2d0fb4f3fc8086d61e2d8e506d5c2b930ba525a7
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 03/18/2019
-ms.locfileid: "58000711"
 documentType: LandingData
 title: Azure Storage-dokumentation
 metadata:
-  title: Dokumentation om Azure Storage – Självstudier, API-referens | Microsoft Docs
-  description: Azure Storage är en Microsoft-hanterad molntjänst som tillhandahåller lagring som är mycket tillgänglig, säker, beständig, skalbar och redundant. Azure Storage omfattar Azure-blobar, Azure Data Lake Storage Gen2, Azure Files, Azure-köer och Azure-tabeller.
+  title: 'Dokumentation om Azure Storage – Självstudier, API-referens | Microsoft Docs'
+  description: 'Azure Storage är en Microsoft-hanterad molntjänst som tillhandahåller lagring som är mycket tillgänglig, säker, beständig, skalbar och redundant. Azure Storage omfattar Azure-blobar, Azure Data Lake Storage Gen2, Azure Files, Azure-köer och Azure-tabeller.'
   services: storage
   author: tamram
   manager: twooley
@@ -20,130 +14,130 @@ metadata:
   ms.date: 06/27/2018
   ms.author: tamram
 abstract:
-  description: Azure Storage är en Microsoft-hanterad tjänst som tillhandahåller lagring i molnet som är mycket tillgänglig, säker, beständig, skalbar och redundant. Azure Storage omfattar Azure-blobar (objekt), Azure Data Lake Storage Gen2, Azure Files, Azure-köer och Azure-tabeller. Lär dig att utnyttja Azure Storage i dina program med våra snabbstarter och självstudier.
+  description: 'Azure Storage är en Microsoft-hanterad tjänst som tillhandahåller lagring i molnet som är mycket tillgänglig, säker, beständig, skalbar och redundant. Azure Storage omfattar Azure-blobar (objekt), Azure Data Lake Storage Gen2, Azure Files, Azure-köer och Azure-tabeller. Lär dig att utnyttja Azure Storage i dina program med våra snabbstarter och självstudier.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Lär dig att arbeta med Azure Storage med hjälp av dessa snabbstarter.
-  - type: table
-    style: dataMatrix
-    columns:
-    - image:
-        src: media/index/portal.svg
-        text: Portalen
-    - image:
-        src: media/index/logo_powershell.svg
-        text: PowerShell
-    - image:
-        src: media/index/cli.svg
-        text: Azure CLI
-    - image:
-        src: media/index/logo_net.svg
-    - image:
-        src: media/index/logo_java.svg
-    - image:
-        src: media/index/logo_python.svg
-    - image:
-        src: media/index/logo_nodejs.svg
-    rows:
-    - title: Skapa lagringskonto
-      values:
-      - href: /azure/storage/common/storage-quickstart-create-account?tabs=portal
-      - href: /azure/storage/common/storage-quickstart-create-account?tabs=powershell
-      - href: /azure/storage/common/storage-quickstart-create-account?tabs=azure-cli
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-    - title: Blob-snabbstarter
-      values:
-      - href: /azure/storage/blobs/storage-quickstart-blobs-portal
-      - href: /azure/storage/blobs/storage-quickstart-blobs-powershell
-      - href: /azure/storage/blobs/storage-quickstart-blobs-cli
-      - href: /azure/storage/blobs/storage-quickstart-blobs-dotnet
-      - href: /azure/storage/blobs/storage-quickstart-blobs-java
-      - href: /azure/storage/blobs/storage-quickstart-blobs-python
-      - href: /azure/storage/blobs/storage-quickstart-blobs-nodejs
-    - title: Data Lake Storage Gen2
-      values:
-      - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
-      - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
-      - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
-      - href: 
-      - href: 
-      - href: 
-      - href: 
-- title: Stegvisa självstudier
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+  - title: Snabbstarter på 5 minuter
     items:
-    - title: Blobar
-      html: <p>Ladda upp och bearbeta avbildningsdata i molnet</p><ul><li><a href="/azure/storage/blobs/storage-upload-process-images">Ladda upp och hämta avbildningsdata i molnet</a></li><li><a href="/azure/event-grid/resize-images-on-storage-blob-upload-event?toc=%2fazure%2fstorage%2fblobs%2ftoc.json">Utlösa Azure Functions för att bearbeta blobar</a></li><li><a href="/azure/storage/blobs/storage-secure-access-application">Skydda programdata</a></li><li><a href="/azure/storage/blobs/storage-monitor-troubleshoot-storage-application">Övervaka och felsöka lagring</a></li></ul><p>Utforma ditt program för hög tillgänglighet</p><ul><li><a href="/azure/storage/blobs/storage-create-geo-redundant-storage">Skapa hög tillgänglighet för dina programdata</a></li><li><a href="/azure/storage/blobs/storage-simulate-failure-ragrs-account-app">Simulera ett fel vid läsåtkomst till redundant lagring</a></li></ul><p><a href="/azure/storage/blobs/storage-unstructured-search">Söka efter ostrukturerade data i Azure Storage</a></p>
-    - title: Data Lake Storage Gen2
-      html: <p><a href="/azure/storage/blobs/data-lake-storage-handle-data-using-databricks">Extrahera, transformera och läsa in data med Azure Databricks</a></p><p><a href="/azure/storage/blobs/data-lake-storage-use-databricks-spark">Få åtkomst till Azure Data Lake Storage Gen2-data med DataBricks med hjälp av Spark</a></p><p><a href="/azure/storage/blobs/data-lake-storage-tutorial-extract-transform-load-hive">Extrahera, transformera och läsa in data med Apache Hive på Azure HDInsight</a></p>
-- title: Exempel
-  items:
-  - type: paragraph
-    text: Hitta skript för vanliga hanteringsuppgifter.
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Lär dig att arbeta med Azure Storage med hjälp av dessa snabbstarter.
+      - type: table
+        style: dataMatrix
+        columns:
+          - image:
+              src: media/index/portal.svg
+              text: Portalen
+          - image:
+              src: media/index/logo_powershell.svg
+              text: PowerShell
+          - image:
+              src: media/index/cli.svg
+              text: Azure CLI
+          - image:
+              src: media/index/logo_net.svg
+          - image:
+              src: media/index/logo_java.svg
+          - image:
+              src: media/index/logo_python.svg
+          - image:
+              src: media/index/logo_nodejs.svg
+        rows:
+          - title: Skapa lagringskonto
+            values:
+              - href: /azure/storage/common/storage-quickstart-create-account?tabs=portal
+              - href: /azure/storage/common/storage-quickstart-create-account?tabs=azure-powershell
+              - href: /azure/storage/common/storage-quickstart-create-account?tabs=azure-cli
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+          - title: Blob-snabbstarter
+            values:
+              - href: /azure/storage/blobs/storage-quickstart-blobs-portal
+              - href: /azure/storage/blobs/storage-quickstart-blobs-powershell
+              - href: /azure/storage/blobs/storage-quickstart-blobs-cli
+              - href: /azure/storage/blobs/storage-quickstart-blobs-dotnet
+              - href: /azure/storage/blobs/storage-quickstart-blobs-java
+              - href: /azure/storage/blobs/storage-quickstart-blobs-python
+              - href: /azure/storage/blobs/storage-quickstart-blobs-nodejs
+          - title: Data Lake Storage Gen2
+            values:
+              - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
+              - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
+              - href: /azure/storage/blobs/data-lake-storage-quickstart-create-account
+              - href: null
+              - href: null
+              - href: null
+              - href: null
+  - title: Stegvisa självstudier
     items:
-    - html: .NET &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=dotnet">blobar</a> | <a     href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=dotnet">filer</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=dotnet">köer</a>
-    - html: Java &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=java">blobar</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=java">filer</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=java">köer</a>
-    - html: <a href="/azure/storage/blobs/storage-samples-blobs-powershell">Azure PowerShell</a>
-    - html: <a href="/azure/storage/blobs/storage-samples-blobs-cli">Azure CLI</a>
-- title: Utveckla dina färdigheter med Microsoft Learn
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Blobar
+            html: <p>Ladda upp och bearbeta avbildningsdata i molnet</p><ul><li><a href="/azure/storage/blobs/storage-upload-process-images">Ladda upp och hämta avbildningsdata i molnet</a></li><li><a href="/azure/event-grid/resize-images-on-storage-blob-upload-event?toc=%2fazure%2fstorage%2fblobs%2ftoc.json">Utlösa Azure Functions för att bearbeta blobar</a></li><li><a href="/azure/storage/blobs/storage-secure-access-application">Skydda programdata</a></li><li><a href="/azure/storage/blobs/storage-monitor-troubleshoot-storage-application">Övervaka och felsöka lagring</a></li></ul><p>Utforma ditt program för hög tillgänglighet</p><ul><li><a href="/azure/storage/blobs/storage-create-geo-redundant-storage">Skapa hög tillgänglighet för dina programdata</a></li><li><a href="/azure/storage/blobs/storage-simulate-failure-ragrs-account-app">Simulera ett fel vid läsåtkomst till redundant lagring</a></li></ul><p><a href="/azure/storage/blobs/storage-unstructured-search">Söka i ostrukturerade data i Azure Storage</a></p>
+          - title: Data Lake Storage Gen2
+            html: '<p><a href="/azure/storage/blobs/data-lake-storage-handle-data-using-databricks">Extrahera, transformera och läsa in data med Azure Databricks</a></p><p><a href="/azure/storage/blobs/data-lake-storage-use-databricks-spark">Få åtkomst till Azure Data Lake Storage Gen2-data med DataBricks med hjälp av Spark</a></p><p><a href="/azure/storage/blobs/data-lake-storage-tutorial-extract-transform-load-hive">Extrahera, transformera och läsa in data med Apache Hive på Azure HDInsight</a></p>'
+  - title: Exempel
     items:
-    - title: Introduktion till data i Azure
-      href: /learn/modules/intro-to-data-in-azure/
-      image:
-        src: /learn/achievements/intro-to-data-in-azure.svg
-        href: //learn/modules/intro-to-data-in-azure/
-    - title: " Välj en metod för lagring av data i Azure"
-      href: /learn/modules/choose-storage-approach-in-azure/
-      image:
-        src: /learn/achievements/choose-storage-approach-in-azure.svg
-        href: /learn/modules/choose-storage-approach-in-azure/
-    - title: Skapa ett Azure-lagringskonto
-      href: /learn/modules/create-azure-storage-account/
-      image:
-        src: /learn/achievements/create-azure-storage-account.svg
-        href: /learn/modules/create-azure-storage-account/
-  - type: paragraph
-    text: <a href="/learn/browse/?products=azure-storage">Mer interaktiv inlärning...</a>
-- title: Kostnadsfri videoutbildning för Pluralsight
-  items:
-  - type: list
-    style: cards
-    className: cardsFTitle
+      - type: paragraph
+        text: Hitta skript för vanliga hanteringsuppgifter.
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: '.NET &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=dotnet">blobar</a> | <a     href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=dotnet">filer</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=dotnet">köer</a>'
+          - html: 'Java &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=java">blobar</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=java">filer</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=java">köer</a>'
+          - html: <a href="/azure/storage/blobs/storage-samples-blobs-powershell">Azure PowerShell</a>
+          - html: <a href="/azure/storage/blobs/storage-samples-blobs-cli">Azure CLI</a>
+  - title: Utveckla dina färdigheter med Microsoft Learn
     items:
-    - title: Utveckla med .NET för Azure
-      href: https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents
-    - title: Utveckla med Node.js för Azure
-      href: https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents
-      image:
-        src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
-        href: https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Introduktion till data i Azure
+            href: /learn/modules/intro-to-data-in-azure/
+            image:
+              src: /learn/achievements/intro-to-data-in-azure.svg
+              href: //learn/modules/intro-to-data-in-azure/
+          - title: "\_Välj en metod för lagring av data i Azure"
+            href: /learn/modules/choose-storage-approach-in-azure/
+            image:
+              src: /learn/achievements/choose-storage-approach-in-azure.svg
+              href: /learn/modules/choose-storage-approach-in-azure/
+          - title: Skapa ett Azure-lagringskonto
+            href: /learn/modules/create-azure-storage-account/
+            image:
+              src: /learn/achievements/create-azure-storage-account.svg
+              href: /learn/modules/create-azure-storage-account/
+      - type: paragraph
+        text: <a href="/learn/browse/?products=azure-storage">Mer interaktiv inlärning...</a>
+  - title: Kostnadsfri videoutbildning för Pluralsight
     items:
-    - title: Kommandorad
-      html: <p><a href="/powershell/storage">PowerShell</a></p><p><a href="/cli/azure/storage">Azure CLI</a></p>
-    - title: Språk
-      html: <p><a href="/dotnet/api/overview/azure/storage/client?view=azure-dotnet">NET</a></p><p><a href="/java/api/overview/azure/storage/client?view=azure-java-stable">Java</a></p><p><a href="/javascript/api/overview/azure/storage?view=azure-node-latest">Node.js</a></p><p><a href="/python/api/overview/azure/storage">Python</a></p><p><a href="https://azure.github.io/azure-storage-php/">PHP</a></p><p><a href="https://azure.github.io/azure-storage-ruby">Ruby</a></p><p><a href="https://azure.github.io/azure-storage-cpp">C++</a></p><p><a href="https://github.com/Azure/azure-storage-ios">iOS</a></p><p><a href="https://azure.github.io/azure-storage-android">Android</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/storageservices">API:er för blobar, köer, tabeller och filer</a></p><p><a href="/rest/api/storagerp">API för lagringsresursprovider</a></p><p><a href="/rest/api/storageimportexport">API för Import/Export-tjänsten</a></p>
+      - type: list
+        style: cards
+        className: cardsFTitle
+        items:
+          - title: Utveckla med .NET för Azure
+            href: 'https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents'
+          - title: Utveckla med Node.js för Azure
+            href: 'https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
+              href: 'https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents'
+  - title: Referens
+    items:
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: <p><a href="/powershell/storage">PowerShell</a></p><p><a href="/cli/azure/storage">Azure CLI</a></p>
+          - title: Språk
+            html: '<p><a href="/dotnet/api/overview/azure/storage/client?view=azure-dotnet">.NET</a></p><p><a href="/java/api/overview/azure/storage/client?view=azure-java-stable">Java</a></p><p><a href="/javascript/api/overview/azure/storage?view=azure-node-latest">Node.js</a></p><p><a href="/python/api/overview/azure/storage">Python</a></p><p><a href="https://azure.github.io/azure-storage-php/">PHP</a></p><p><a href="https://azure.github.io/azure-storage-ruby">Ruby</a></p><p><a href="https://azure.github.io/azure-storage-cpp">C++</a></p><p><a href="https://github.com/Azure/azure-storage-ios">iOS</a></p><p><a href="https://azure.github.io/azure-storage-android">Android</a></p>'
+          - title: REST
+            html: '<p><a href="/rest/api/storageservices">API för blobar, köer, tabeller och filer</a></p><p><a href="/rest/api/storagerp">API för lagringsresursprovider</a></p><p><a href="/rest/api/storageimportexport">API för import/export-tjänst</a></p>'
