--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -123,8 +123,10 @@ items:
       href: dbms_guide_sqlserver.md
     - name: DBMS-distribution för SAP-arbetsbelastning för Oracle på Azure Virtual Machines
       href: dbms_guide_oracle.md
-    - name: DBMS-distribution för SAP-arbetsbelastning för IBM DB2 på Azure Virtual Machines
+    - name: DBMS-distribution för SAP-arbetsbelastning för IBM Db2 på virtuella Azure-datorer
       href: dbms_guide_ibm.md
+    - name: Hög tillgänglighet för IBM Db2 LUW på virtuella Azure-datorer på SUSE Linux Enterprise Server
+      href: dbms-guide-ha-ibm.md
     - name: DBMS-distribution för SAP-arbetsbelastning för SAP ASE på Azure Virtual Machines
       href: dbms_guide_sapase.md
     - name: Distribution av SAP MaxDB, liveCache och innehållsserver på Azure
@@ -229,9 +231,9 @@ items:
   items:
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/
-ms.openlocfilehash: e366d205b3d903ad79b26798a82ee05752ac5622
-ms.sourcegitcommit: 09bb15a76ceaad58517c8fa3b53e1d8fec5f3db7
+ms.openlocfilehash: b91931661ad91f813ca84e0c9b7bef4b22e2e975
+ms.sourcegitcommit: 1a19a5845ae5d9f5752b4c905a43bf959a60eb9d
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/01/2019
-ms.locfileid: "58762964"
+ms.lasthandoff: 04/11/2019
+ms.locfileid: "59489044"
